--- a/SimpleNimbleExtended/SimpleNimbleExtended/LoginRegister.xaml
+++ b/SimpleNimbleExtended/SimpleNimbleExtended/LoginRegister.xaml
@@ -14,16 +14,16 @@
                     </Grid>
                     <Grid x:Name="gd_register" HeightRequest="0" BackgroundColor="{DynamicResource darkBackground}" Grid.Row="1"  IsVisible="true" RowDefinitions="*,75" RowSpacing="0">
                         <StackLayout Padding="15,15,15,0" Grid.Row="0">
-                            <Entry Placeholder="Username" HorizontalOptions="FillAndExpand" Keyboard="Default"/>
-                            <Entry Placeholder="Email" HorizontalOptions="FillAndExpand" Keyboard="Email"/>
-                            <Entry Placeholder="Password" HorizontalOptions="FillAndExpand" Keyboard="Default" IsPassword="True"/>
-                            <Entry Placeholder="Retype password" HorizontalOptions="FillAndExpand" Keyboard="Default" IsPassword="True"/>
+                            <Entry x:Name="tb_userRegister" Placeholder="Username" HorizontalOptions="FillAndExpand" Keyboard="Default"/>
+                            <Entry x:Name="tb_emailRegister" Placeholder="Email" HorizontalOptions="FillAndExpand" Keyboard="Email"/>
+                            <Entry x:Name="tb_pass1Register" Placeholder="Password" HorizontalOptions="FillAndExpand" Keyboard="Default" IsPassword="True"/>
+                            <Entry x:Name="tb_pass2Register" Placeholder="Retype password" HorizontalOptions="FillAndExpand" Keyboard="Default" IsPassword="True"/>
                         </StackLayout>
                         <StackLayout HorizontalOptions="Start" Padding="15,0,0,0" Orientation="Horizontal" Grid.Row="1">
                             <Label VerticalOptions="Center">Keep</Label>
-                            <Switch IsToggled="True" />
+                            <Switch x:Name="sw_KeepRegister" IsToggled="True" />
                         </StackLayout>
-                        <Button Grid.Row="1" Text="Register" VerticalOptions="End" HorizontalOptions="End" FontSize="Large" Padding="15" Margin="0,0,10,10"/>
+                        <Button Grid.Row="1" Text="Register" VerticalOptions="End" HorizontalOptions="End" FontSize="Large" Padding="15" Margin="0,0,10,10" x:Name="Bt_register" Clicked="Bt_register_Clicked"/>
                     </Grid>
                 </Grid>
             </Frame>
@@ -37,14 +37,14 @@
                     </Grid>
                     <Grid x:Name="gd_login" HeightRequest="0" BackgroundColor="{DynamicResource darkBackground}" Grid.Row="1"  IsVisible="true" RowDefinitions="*,75" RowSpacing="0">
                         <StackLayout Padding="15,15,15,0" Grid.Row="0">
-                            <Entry Placeholder="Email" HorizontalOptions="FillAndExpand" Keyboard="Email"/>
-                            <Entry Placeholder="Password" HorizontalOptions="FillAndExpand" Keyboard="Default" IsPassword="True"/>
+                            <Entry Placeholder="Username" HorizontalOptions="FillAndExpand" Keyboard="Default" x:Name="tb_userLogin"/>
+                            <Entry Placeholder="Password" HorizontalOptions="FillAndExpand" Keyboard="Default" x:Name="tb_passLogin" IsPassword="True"/>
                         </StackLayout>
                         <StackLayout HorizontalOptions="Start" Padding="15,0,0,0" Orientation="Horizontal" Grid.Row="1">
                             <Label VerticalOptions="Center">Keep</Label>
-                            <Switch IsToggled="True" />
+                            <Switch x:Name="sw_KeepLogin" IsToggled="True" />
                         </StackLayout>
-                        <Button Grid.Row="1" Text="Login" VerticalOptions="End" HorizontalOptions="End" FontSize="Large" Padding="15" Margin="0,0,10,10"/>
+                        <Button Grid.Row="1" Text="Login" VerticalOptions="End" HorizontalOptions="End" FontSize="Large" Padding="15" Margin="0,0,10,10" x:Name="Bt_login" Clicked="Bt_login_Clicked"/>
                     </Grid>
                 </Grid>
             </Frame>
